# Trace-Desktop

./: CMakeLists.txt  main.cpp
include/auth/log-in/: log_in.h
include/auth/registration/: registration.h
include/chats/: chat_cell.h  chats_window.h  scroll_bar.h  stomp_client.h
include/utils/: config_utils.h  custom_windows.h
src/auth/: auth.cpp
src/auth/log-in/: log_in.cpp  log_in_window.ui
src/auth/registration/: registration.cpp
src/chats/: chat_cell.cpp  chats_window.cpp  chats_window.ui  scroll_bar.cpp  stomp_client.cpp
ui_forms/: chat_cell.ui  chats_window.ui
utils/: config_utils.cpp  custom_windows.cpp
